tests/functional/lang/parse-fail/eof-pos.err.exp
error: syntax error, unexpected end of file
       at «stdin»:3:1:
            2| # no content
            3|
             | ^
